--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.899Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "vpd",
@@ -41,17 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "datr",
@@ -59,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "pas",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "dpr",
@@ -77,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "c_user",
@@ -104,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "xs",
@@ -113,34 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWeKWYAmuSocfkBvo7fWTLUT0Nmn-uWw_2oAAFvm259DHTDWlag.Bn_fCK..AAA.0.0.Bpnjuy.AWfgFG1xUC5kgUSjwkxVIFzmCmc",
+        "value": "0MmXGi5OoGPsKoWdq.AWfSbcrQCXd4lxcGsekobyrJUJrJ2-AJfI7GxieKHwTi5v8otsY.Bn_fCK..AAA.0.0.BpoFxu.AWeMwQOVg_2myneLuEshBEi8fJw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "fbl_st",
-        "value": "101032501%3BT%3A29532960",
+        "value": "101338457%3BT%3A29535285",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3097%3Btimestamp%3A1771977650",
+        "value": "v2%3Bclient_version%3A3098%3Btimestamp%3A1772117102",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-25T00:01:18.900Z",
-        "lastAccessed": "2026-02-25T00:01:18.900Z"
+        "creation": "2026-02-26T14:45:20.705Z",
+        "lastAccessed": "2026-02-26T14:45:20.705Z"
     }
 ]
